components/Header/Header.module.scss
@import "../styles/variables";
@import "../styles/mixins";

$desktopPalmWidth: 1000px;

.header {
  // position: fixed;
  // top:0;
  // left:0;
  position:relative;
  display: flex;
  width:100%;
  height: 80px;
  overflow: hidden;
  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);

  background: linear-gradient(
    160deg,
    rgba(4, 18, 5, 1) 3%,
    rgba(193, 45, 69, 1) 37%,
    rgba(227, 59, 72, 1) 56%,
    rgba(240, 146, 40, 1) 74%,
    rgba(245, 182, 27, 1) 100%
  );
  z-index:10;

  @include bp(medium){
    position:relative;
    height:800px;
    box-shadow:none;
  }
}
.header.subpage{
  @include bp(medium){
    height:400px;
  }
  .callToAction{
    left:50%;
    transform:translateX(-50%);
  }
  .wave{
    display:none;
  }
  .ctaTitle,.ctaDescription{
    text-align:center;
  }

}
.headerInner{
  display: flex;
  flex-basis:30px;
  order:-1;
  align-items: center;
  padding-left: 4%;
  @include constrain();
  z-index:10;
  @include bp(medium){
    display:flex;
    flex-basis:100%;
    align-items: center;
    order:0;
  }
}
.topNav{
  display: flex;
  width: 100%;
  height: 80px;
}
.logo {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  align-self: flex-start;
  flex-basis: 100%;
  height:100%;
  cursor: pointer;
  position: relative;
  z-index:1;

  svg {
    display:none;
    width: 20%;
    height: auto;
    fill: $amber;

    @include bp(medium){
      display:block;    
    }
  }
  @include bp(medium){
    align-items: flex-start;
    padding-left: spacing(10);
  }
}
.logoLink{
  text-decoration: none;
}
.sublogo {
  position:relative;
  left: spacing(-3);
  color: #f2ce3f;
  font-size: 20px;
  font-family: $rockSalt;

  @include bp(medium){
    position: absolute;
    width: 215px;
    transform: rotateZ(-6deg);
    bottom: 6px;
    left: 20px;
    font-size:15px;
  }
}
.scene {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 250px;

  @include bp(medium){
    height:100%;
  }
}
.callToAction{
  display:none;
  flex-direction:column;
  position: absolute;
  top: 30%;
  left:10%;
  width:800px;
  z-index: 1;
  color:$white;
  @include bp(medium){
    display:flex;
  }
}
.ctaTitle{
  font-size:72px;
  font-family:$rubik;
  letter-spacing: -2px;
  font-weight: 700;
  line-height: 72px;
}
.ctaDescription{
  margin-top:spacing(3);
  white-space: normal;
  text-align: left;
  line-height: 27px;
  letter-spacing: 0px;
  font-family:$rubik;
  font-weight: 400;
  font-size: 20px;
}
.sites{
  display:flex;
  margin-top:spacing(3);
  font-family:$work;

}

.siteCTA{
  & + & {
    margin-left:spacing(2);
  }
}
.icon{
  flex-basis:50%;
  display:flex;
  justify-content: center;
  align-items: center;
  font-size:25px;
}
.siteName{
  display:flex;
  flex-direction:column;
  line-height: 1.3;
  font-size: 12px;
  font-weight: 500;
}
.palmtreeSvg {
  position: absolute;
  top: 0;
  left: 0;
  width: 500px;
  &:nth-child(1) {
    top: 186px;
    left: 4%;
    width: 159px;
    transform: rotate(351deg);
    @include bp(medium){
      top: 279px;
      left: 19%;
      width:$desktopPalmWidth;
      transform: rotate(12deg);
    }
  }
  &:nth-child(2) {
    width: 183px;
    top: 177px;
    left: 16%;
    transform: rotate(356deg);
    @include bp(medium){
      display:block;
      width:$desktopPalmWidth;
      top: 263px;
      left:35%;
      transform: rotate(3deg);
    }
  }
  &:nth-child(3) {
    width: 159px;
    top: 200px;
    left: 69%;
    transform: rotate(12deg);

    @include bp(medium){
      width:$desktopPalmWidth;
      top: 211px;
      left: 50%;
      transform: rotate(4deg);
    }
  }
  &:nth-child(4) {
    width: 159px;
    top: 175px;
    left: 92%;
    transform: rotate(348deg);
    @include bp(medium){
      width:$desktopPalmWidth;
      top: 369px;
      left: 55%;
      transform: rotate(18deg);
    }
  }
  &:nth-child(5) {
    width: 159px;
    top: 175px;
    left: 92%;
    transform: rotate(348deg);
    @include bp(medium){
      width:$desktopPalmWidth;
      top: 139px;
      left: 83%;
      transform: rotate(353deg);
    }
  }
}
.wave{
  display:none;
  position: absolute;
  fill: darken(#282828, 2.5);
  bottom: -17px;
  left: 0;
  @include bp(medium){
    display:block;
  }
}

